# h_rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  env_example  pyproject.toml
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  README.md  env_example  pyproject.toml
backend/src/h_rag/: tools.py
backend/src/h_rag/agents/: generator_agent.py  retriever_agent.py
backend/src/h_rag/api/: main.py
backend/src/h_rag/chunking/: chunking.py  chunking_factory.py  fixed_size_chunking.py  semantic_chunking.py
backend/src/h_rag/config/: config.yaml  config_wrapper.py
backend/src/h_rag/data_processing/: data_processor.py  embedding.py
backend/src/h_rag/db/: postgres_wrapper.py
backend/src/h_rag/llm/: llm.py  (+3 more)
backend/tests/: conftest.py
backend/tests/integration_tests/: conftest.py
db/: init.sql
frontend/: Dockerfile  README.md  pyproject.toml
frontend/src/h_rag/: chat.py  menu.py
frontend/src/h_rag/.streamlit/: config.toml
frontend/src/h_rag/pages/: knowledge_base.py
src/frontend/: chat.py
src/frontend/pages/: knowledge_base.py
src/h_rag/: tools.py
src/h_rag/api/: main.py
src/h_rag/chunking/: chunking_factory.py  fixed_size_chunking.py
src/h_rag/config/: config.yaml  config_wrapper.py
src/h_rag/data_processing/: data_processor.py
src/h_rag/llm/: gemini_wrapper.py  llm.py  llm_factory.py  ollama_wrapper.py
src/h_rag/models/: vector_search_result.py
src/h_rag/object_storage/: garage_wrapper.py  object_storage.py  object_storage_factory.py
src/h_rag/prompts/: generator_prompts.py
src/h_rag/services/: chat.py  knowledge_bases.py  startup.py
src/h_rag/streamlit/: chat.py  main.py  menu.py
src/h_rag/vector_db/: chroma_wrapper.py  vector_db.py  vector_db_factory.py
src/h_rag/workflows/: default_workflow.py  workflow.py  workflow_factory.py
tests/unit_tests/: conftest.py
tests/unit_tests/chunking/: test_chunking_factory.py  test_fixed_size_chunking.py  test_semantic_chunking.py
tests/unit_tests/llm/: test_llm_factory.py
tests/unit_tests/vector_db/: test_vector_db_factory.py
(+40 files in other folders)
